; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/nodes/extr_outfuncs.c__outRowCompareExpr.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/nodes/extr_outfuncs.c__outRowCompareExpr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"ROWCOMPARE\00", align 1
@rctype = common dso_local global i32 0, align 4
@RowCompareType = common dso_local global i32 0, align 4
@opnos = common dso_local global i32 0, align 4
@opfamilies = common dso_local global i32 0, align 4
@inputcollids = common dso_local global i32 0, align 4
@largs = common dso_local global i32 0, align 4
@rargs = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @_outRowCompareExpr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_outRowCompareExpr(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = call i32 @WRITE_NODE_TYPE(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %6 = load i32, i32* @rctype, align 4
  %7 = load i32, i32* @RowCompareType, align 4
  %8 = call i32 @WRITE_ENUM_FIELD(i32 %6, i32 %7)
  %9 = load i32, i32* @opnos, align 4
  %10 = call i32 @WRITE_NODE_FIELD(i32 %9)
  %11 = load i32, i32* @opfamilies, align 4
  %12 = call i32 @WRITE_NODE_FIELD(i32 %11)
  %13 = load i32, i32* @inputcollids, align 4
  %14 = call i32 @WRITE_NODE_FIELD(i32 %13)
  %15 = load i32, i32* @largs, align 4
  %16 = call i32 @WRITE_NODE_FIELD(i32 %15)
  %17 = load i32, i32* @rargs, align 4
  %18 = call i32 @WRITE_NODE_FIELD(i32 %17)
  ret void
}

declare dso_local i32 @WRITE_NODE_TYPE(i8*) #1

declare dso_local i32 @WRITE_ENUM_FIELD(i32, i32) #1

declare dso_local i32 @WRITE_NODE_FIELD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
